fixing modal margin spacing

--- a/src/css/components/modal.scss
+++ b/src/css/components/modal.scss
@@ -31,6 +31,8 @@
 @media screen and (min-width: $width-min-med) {
   .modal .dialog {
     margin: 2em;
+    width: auto;
+    height: auto;
   }
 }
 
